--- a/deployment/03-publicalb.yaml
+++ b/deployment/03-publicalb.yaml
@@ -11,7 +11,7 @@ Metadata:
         default: ALB Parameters
       Parameters:
         - Vpc
-        - PublicAlbCertificate
+        - PublicAlbCertificateArn
         - PublicAlbSecurityGroup
         - NumberOfSubnets
         - Subnet
@@ -40,9 +40,10 @@ Parameters:
     Description: Number of subnets. This must match your selections in the list of subnets below.
     Type: String 
   PublicAlbCertificateArn:
-    # AllowedPattern: ^$|(arn:aws:acm:)([a-z0-9/:-])*([a-z0-9])$
-    Description: '[ Optional ] The AWS Certification Manager certificate ARN for the ALB certificate - this certificate should be created in the region you wish to run the ALB and must reference the Moodle domain name you use below.'
+    AllowedPattern: ^$|(arn:aws-cn:iam)::([0-9]{12}):server-certificate/(.*)$
+    Description: '[ Optional ] The certificate ARN for the ALB certificate - this certificate should be created in the region you wish to run the ALB and must reference the Moodle domain name you use below.'
     Type: String
+    Default: ''
   PublicAlbSecurityGroup:
     Description: Select the ALB security group.
     Type: AWS::EC2::SecurityGroup::Id
