delete unit test in buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,9 +8,7 @@ phases:
       - echo "nothing to do in install"
   pre_build:
     commands:
-      - echo "Installing dependencies and executing unit tests - `pwd`"
-      - cd deployment && chmod +x ./run-unit-tests.sh && ./run-unit-tests.sh
-      - echo "Installing dependencies and executing unit tests completed `date`"
+      - ehoc "no dependencies, no unit test "
   build:
     commands:
       - echo "Starting build `date` in `pwd`"
